引入pylint，代码格式化

--- a/GUI/AppGUI.ui
+++ b/GUI/AppGUI.ui
@@ -319,7 +319,7 @@
          <string>理想价格</string>
         </property>
        </widget>
-       <widget class="QCheckBox" name="is_convertiable">
+       <widget class="QCheckBox" name="is_convertible">
         <property name="enabled">
          <bool>true</bool>
         </property>
