--- a/GUI/AppGUI.ui
+++ b/GUI/AppGUI.ui
@@ -24,7 +24,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="rolling_tab">
        <attribute name="title">
@@ -33,8 +33,8 @@
        <widget class="QLabel" name="label_loop_gap">
         <property name="geometry">
          <rect>
-          <x>10</x>
-          <y>110</y>
+          <x>30</x>
+          <y>60</y>
           <width>71</width>
           <height>31</height>
          </rect>
@@ -51,33 +51,12 @@
          <string>循环间隔</string>
         </property>
        </widget>
-       <widget class="QLabel" name="label_use">
-        <property name="geometry">
-         <rect>
-          <x>140</x>
-          <y>170</y>
-          <width>191</width>
-          <height>31</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <family>微软雅黑</family>
-          <pointsize>11</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>F8开始 F9停止</string>
-        </property>
-       </widget>
        <widget class="QCheckBox" name="is_fast_sell">
         <property name="geometry">
          <rect>
-          <x>230</x>
-          <y>60</y>
-          <width>191</width>
+          <x>250</x>
+          <y>10</y>
+          <width>141</width>
           <height>31</height>
          </rect>
         </property>
@@ -93,29 +72,11 @@
          <string>快速售卖</string>
         </property>
        </widget>
-       <widget class="QTextEdit" name="textEdit_fast_sell_threshold">
-        <property name="geometry">
-         <rect>
-          <x>80</x>
-          <y>60</y>
-          <width>121</width>
-          <height>31</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <family>微软雅黑</family>
-          <pointsize>11</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-       </widget>
        <widget class="QTextEdit" name="textEdit_rolling_loop_gap">
         <property name="geometry">
          <rect>
-          <x>80</x>
-          <y>110</y>
+          <x>100</x>
+          <y>60</y>
           <width>121</width>
           <height>31</height>
          </rect>
@@ -132,7 +93,7 @@
        <widget class="QComboBox" name="comboBox_mode1_option">
         <property name="geometry">
          <rect>
-          <x>80</x>
+          <x>100</x>
           <y>10</y>
           <width>121</width>
           <height>31</height>
@@ -147,31 +108,10 @@
          </font>
         </property>
        </widget>
-       <widget class="QLabel" name="label_fast_sell_threshold">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>60</y>
-          <width>71</width>
-          <height>31</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <family>微软雅黑</family>
-          <pointsize>11</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>快售阈值</string>
-        </property>
-       </widget>
        <widget class="QLabel" name="label_mode1_option">
         <property name="geometry">
          <rect>
-          <x>10</x>
+          <x>30</x>
           <y>10</y>
           <width>71</width>
           <height>31</height>
@@ -192,9 +132,9 @@
        <widget class="QCheckBox" name="is_auto_sell">
         <property name="geometry">
          <rect>
-          <x>230</x>
-          <y>110</y>
-          <width>191</width>
+          <x>250</x>
+          <y>60</y>
+          <width>141</width>
           <height>31</height>
          </rect>
         </property>
@@ -214,7 +154,7 @@
         <property name="geometry">
          <rect>
           <x>230</x>
-          <y>10</y>
+          <y>160</y>
           <width>181</width>
           <height>31</height>
          </rect>
@@ -229,6 +169,90 @@
         </property>
         <property name="text">
          <string>滚仓配置</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="is_second_detect">
+        <property name="geometry">
+         <rect>
+          <x>250</x>
+          <y>110</y>
+          <width>141</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>微软雅黑</family>
+          <pointsize>11</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>二次检测</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_use_4">
+        <property name="geometry">
+         <rect>
+          <x>100</x>
+          <y>210</y>
+          <width>191</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>微软雅黑</family>
+          <pointsize>11</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>F8开始 F9停止</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="is_switch_to_battlefield">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>110</y>
+          <width>81</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>微软雅黑</family>
+          <pointsize>11</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>切大战场</string>
+        </property>
+       </widget>
+       <widget class="QTextEdit" name="textEdit_switch_to_battlefield_count">
+        <property name="geometry">
+         <rect>
+          <x>100</x>
+          <y>110</y>
+          <width>121</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>微软雅黑</family>
+          <pointsize>11</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;循环多少次后进入大战场&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </widget>
@@ -319,7 +343,7 @@
          <string>理想价格</string>
         </property>
        </widget>
-       <widget class="QCheckBox" name="is_convertiable">
+       <widget class="QCheckBox" name="is_convertible">
         <property name="enabled">
          <bool>true</bool>
         </property>
@@ -427,8 +451,8 @@
        <widget class="QLabel" name="label_use_3">
         <property name="geometry">
          <rect>
-          <x>140</x>
-          <y>170</y>
+          <x>100</x>
+          <y>210</y>
           <width>191</width>
           <height>31</height>
          </rect>
