1. 修改ocr参数 2. 添加最低卖价

--- a/GUI/AppGUI.ui
+++ b/GUI/AppGUI.ui
@@ -24,7 +24,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="rolling_tab">
        <attribute name="title">
@@ -153,9 +153,9 @@
        <widget class="QPushButton" name="rolling_config_btn">
         <property name="geometry">
          <rect>
-          <x>230</x>
+          <x>250</x>
           <y>160</y>
-          <width>181</width>
+          <width>141</width>
           <height>31</height>
          </rect>
         </property>
@@ -253,6 +253,45 @@
         </property>
         <property name="toolTip">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;循环多少次后进入大战场&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
+       <widget class="QTextEdit" name="textEdit_min_sell_price">
+        <property name="geometry">
+         <rect>
+          <x>100</x>
+          <y>160</y>
+          <width>121</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>微软雅黑</family>
+          <pointsize>11</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_min_sell_price">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>160</y>
+          <width>71</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>微软雅黑</family>
+          <pointsize>11</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>最低卖价</string>
         </property>
        </widget>
       </widget>
